[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "group_dro"
version = "0.1.0"
description = "Local development package"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.4.*",
    "torch==2.10.*",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
